# physlr2

./: .gitignore  COMPARISON_REPORT.md  Cargo.toml  LONG_READ_PLAN.md  README.md  REPRODUCING.md  test_compare.py
.github/workflows/: ci.yml
conda/: build.sh  meta.yaml
data/fly_chr4/: config.yaml  draft_20k.fa  draft_50k.fa  reference.fa  supernova_chr4.fa
data/synthetic/: config.yaml  draft1.fa  draft2.fa  linked_reads.fq  reference.fa
scripts/: download_chm13_ont.sh  find-ntcard-mode.py  generate_test_long_reads.py  plotpaf.py  profile_pipeline.sh  reproduce.sh
shpc/: README.md
shpc/scripts/: 00_download_data.sh  01_build_physlr.sh  02_preprocess_10x.sh  10_na12878_stlfr.sh  11_na24143_stlfr.sh  12_na24143_10x.sh  20_collect_results.sh  30_na12878_stlfr_profile.sh  31_na24143_stlfr_profile.sh  40_visualize.sh  50_original_physlr_na12878.sh  51_original_physlr_na24143.sh  52_physlr_next_dsqcosbin_na12878.sh  53_physlr_next_dsqcosbin_na24143.sh  54_physlr_next_distributed_only_na12878.sh  55_original_physlr_cpython_na12878.sh  56_original_physlr_cpython_na24143.sh  57_original_distributed_only.sh  58_test_binning_impact.py  59_compare_molecules.py  60_test_insert_fix_na12878.sh  61_trace_single_barcode.py  62_trace_comparison.sh  63_trace_random_bin.sh  64_trace_distributed_detail.py  65_trace_distributed_detail.sh  67_compare_bc.py  71_full_pipeline_na12878.sh  72_full_pipeline_na24143.sh  73_visualize_final.sh  common.sh
src/: external.rs  lib.rs  main.rs  pipeline.rs  protocol.rs
src/backbone/: mod.rs
src/graph/: mod.rs
workflow/: Snakefile
(+55 files in other folders)
