[package]
name = "physlr"
version = "2.0.0"
edition = "2021"
authors = ["Afshin Afshinfard"]
description = "Next-generation physical maps from linked reads"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/aafshinfard/physlr2"
keywords = ["bioinformatics", "genomics", "linked-reads", "physical-map", "scaffolding"]
categories = ["science", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
petgraph = "0.7"
rustc-hash = "2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
csv = "1"
anyhow = "1"
thiserror = "2"
indicatif = "0.17"
needletail = "0.6"
rand = "0.10.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1
